# openapi-spec-validator

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  SECURITY.md  hooks.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-docs.yml  docker-publish-manual.yml  docker-publish.yml  docs-build.yml  python-publish.yml  python-test.yml  python-tests.yml
docs/: cli.rst  conf.py  contributing.rst  hook.rst  index.rst  python.rst
openapi_spec_validator/: __init__.py  __main__.py  decorators.py  exceptions.py  factories.py  generators.py  handlers.py  managers.py  readers.py  schemas.py  settings.py  shortcuts.py  validators.py
openapi_spec_validator/dereferencing/: decorators.py  dereferencers.py  managers.py  utils.py
openapi_spec_validator/handlers/: base.py  compat.py  file.py  requests.py  urllib.py  utils.py
openapi_spec_validator/resources/schemas/v3.0.0/: schema.json
openapi_spec_validator/resources/schemas/v3.1/: schema.json
openapi_spec_validator/resources/schemas/v3.2/: schema.json
openapi_spec_validator/schemas/: __init__.py  rust_adapters.py  types.py  utils.py
openapi_spec_validator/schemas/backend/: __init__.py  jsonschema.py  jsonschema_rs.py
openapi_spec_validator/validation/: __init__.py  caches.py  decorators.py  exceptions.py  finders.py  keywords.py  protocols.py  proxies.py  registries.py  types.py  validators.py
openapi_spec_validator/versions/: __init__.py  consts.py  datatypes.py  exceptions.py  finders.py  shortcuts.py
tests/bench/: runner.py
tests/integration/: conftest.py  test_errors.py  test_main.py  test_shortcuts.py  test_v2_shortcuts.py  test_v2_validator.py  test_v3_0_shortcuts.py  test_v3_0_validate.py  test_v3_0_validator.py  test_v3_1_shortcuts.py  test_v3_1_validate.py  test_v3_1_validator.py  test_validate.py  test_validators.py  test_versions.py
tests/integration/data/v2.0/: missing-reference.yaml  petstore.yaml  petstore_duplicate_schemas_def.yaml
tests/integration/data/v3.0/: missing-description.yaml  petstore.yaml  petstore_duplicate_schemas_def.yaml  property-missing-reference.yaml  property-recursive.yaml  read-only-write-only.yaml
tests/integration/data/v3.0/parent-reference/: openapi.yaml  recursive.yaml  recursive2.yaml
tests/integration/data/v3.0/petstore-separate/spec/schemas/: Pets.yaml
tests/integration/data/v3.1/: empty.yaml  petstore.yaml  petstore_duplicate_schemas_def.yaml
tests/integration/data/v3.2/: petstore.yaml
tests/integration/validation/: test_dialect.py  test_exceptions.py  test_validators.py
