[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source =["openapi_spec_validator"]

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.mypy]
files = "openapi_spec_validator"
strict = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lazy_object_proxy.*"
ignore_missing_imports = true

[tool.poetry]
name = "openapi-spec-validator"
version = "0.5.5"
description = "OpenAPI 2.0 (aka Swagger) and OpenAPI 3 spec validator"
authors = ["Artur Maciag <maciag.artur@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/p1c2u/openapi-spec-validator"
keywords = ["openapi", "swagger", "schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
jsonschema = "^4.0.0"
openapi-schema-validator = "^0.4.2"
python = "^3.7.0"
requests = {version = "*", optional = true}
importlib-resources = {version = "^5.8.0", python = "<3.9" }
jsonschema-spec = "^0.1.1"
lazy-object-proxy = "^1.7.1"

[tool.poetry.extras]
dev = ["pre-commit"]
requests = ["requests"]

[tool.poetry.dev-dependencies]
pre-commit =  {version = "*", optional = true}
pytest = "^6.2.5"
pytest-flake8 = "=1.0.7"
pytest-cov = "^3.0.0"
tox = "*"
mypy = "^0.971"
isort = "^5.10.1"
black = "^22.8.0"
flynt = "^0.76"

[tool.poetry.scripts]
openapi-spec-validator = "openapi_spec_validator.__main__:main"

[tool.pytest.ini_options]
addopts = """
--capture=no
--verbose
--showlocals
--junitxml=reports/junit.xml
--cov=openapi_spec_validator
--cov-report=term-missing
--cov-report=xml
"""
markers = [
    "network: marks tests which do need network-enabled environment",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
force_single_line = true
