[metadata]
name = openapi-spec-validator
description = OpenAPI 2.0 (aka Swagger) and OpenAPI 3.0.0 spec validator
long_description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
keywords = openapi, swagger, schema
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
zip_safe = False
test_suite = tests
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.4.*
setup_requires =
    setuptools
install_requires =
    jsonschema
    PyYAML>=5.1
    six
    pathlib2; python_version<"3.0"
tests_require =
    mock; python_version<"3.0"
    pytest
    pytest-flake8
    pytest-cov
    tox

[options.entry_points]
console_scripts =
    openapi-spec-validator = openapi_spec_validator.__main__:main

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev = pre-commit

[tool:pytest]
addopts = -sv --flake8 --junitxml reports/junit.xml --cov openapi_spec_validator --cov-report term-missing --cov-report xml:reports/coverage.xml
